--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
-<!doctype html>
+
+<!doctype HTML>
 <html lang="en">
 <head>
   <title>Mosaic a Entertainment Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
@@ -18,6 +19,19 @@
   <link href="assets/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/icon-font.css" type='text/css' />
   <script src="assets/js/jquery-2.1.4.js"></script>
+
+  <base href="/" />
+
+
+
+<!-- -->
+
+
+
+
+
+
+
 </head>
 <body class="sticky-header left-side-collapsed" onload="initMap()">
     <section>
