after signup done

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
-
 <!doctype HTML>
 <html lang="en">
 <head>
+
+
+
+    
+
   <title>Mosaic a Entertainment Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -19,7 +23,14 @@
   <link href="assets/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/icon-font.css" type='text/css' />
   <script src="assets/js/jquery-2.1.4.js"></script>
+  <!--Bootsrap 4 CDN-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+<!--Fontawesome CDN-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+<!--Custom styles-->
+<link rel="stylesheet" type="text/css" href="styles.css">
   <base href="/" />
 
 
